# FileSync

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/pers/zhc/android/filesync/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/pers/zhc/android/filesync/: ConfigActivity.kt  ConfigManager.kt  JNI.kt  MainActivity.kt  MyApplication.kt  SyncDir.kt  ToastUtils.java
app/src/main/java/pers/zhc/android/filesync/utils/: FileUtils.kt  SpinLatch.kt  UiUtils.kt
app/src/main/res/layout/: activity_config.xml  activity_main.xml  dialog_add_sync_dir.xml  list_item_directory.xml
app/src/main/res/menu/: menu_main.xml  popup_menu_delete.xml  popup_menu_sync_dir_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: helper.rs  lib.rs
app/src/test/java/pers/zhc/android/filesync/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
