[package]
name = "jni_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
anyhow = "1.0.75"
byteorder = "1.5.0"
once_cell = "1.18.0"
#adb-sync = { path = "/home/bczhc/code/adb-sync" }
adb-sync = { git = "https://github.com/bczhc/adb-sync", rev = "cdff46bb8cfcc45429d46fed8d7cf66ed2a3c3dc" }

[profile.release]
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"