[package]
name = "jni_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
anyhow = "1.0.75"
byteorder = "1.5.0"
once_cell = "1.18.0"
bincode = { version = "2.0.0-rc.3", features = ["bincode_derive", "derive"] }
#adb-sync = { path = "/home/bczhc/code/adb-sync" }
adb-sync = { git = "https://github.com/bczhc/adb-sync", rev = "1ea437f96d8eabdb94de188cd9a62defc7d81c9c" }

[profile.release]
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
